--- a/src/index.html
+++ b/src/index.html
@@ -40,12 +40,19 @@
             Выбрать
           </button>
           <!-- </form> -->
+          <div class="mui-textfield mui-textfield--float-label">
+            <input type="text" id="input-lesson"/>
+            <label>Input 1</label>
+          </div>
           <br />
           <br />
           <div class="mui--text-black-54 mui--text-body2">Расписание</div>
           <div class="mui-divider"></div>
           <br />
-
+          <!-- card of schedule -->
+          <div class="#schedule-card">
+            <ol class="#schedule-list" style="display: flex"></ol>
+          </div>
           <br />
         </div>
       </div>
