--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
           </button>
           <!-- </form> -->
           <div class="mui-textfield mui-textfield--float-label">
-            <input type="text" id="input-lesson"/>
-            <label>Input 1</label>
+            <input type="text" id="input-lesson" />
+            <label>Введите урок</label>
           </div>
           <br />
           <br />
