--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
           <div class="mui-divider"></div>
           <br />
           <!-- card of schedule -->
-          <div class="#schedule-card">
-            <ol class="#schedule-list" style="display: flex"></ol>
+          <div id="schedule-card">
+            <ol id="schedule-list"></ol>
           </div>
           <br />
         </div>
