--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       type="text/css"
     />
     <script src="https://cdn.muicss.com/mui-latest/js/mui.min.js"></script>
+    <link rel="stylesheet" href="./src/styles.css" />
     <title>School schedule</title>
   </head>
   <body>
@@ -66,7 +67,7 @@
           <div class="mui-divider"></div>
           <br />
           <!-- card of schedule -->
-          
+
           <div id="schedule-card">
             <ol class="list" id="schedule-list"></ol>
           </div>
