--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
           <br />
           <br />
           <div class="mui--text-black-54 mui--text-body2">Расписание</div>
-          <div class="mui-divider"></div>
+          <div class="mui-divider">
+            
+          </div>
           <br />
           <!-- card of schedule -->
 
