--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       type="text/css"
     />
     <script src="https://cdn.muicss.com/mui-latest/js/mui.min.js"></script>
+    <link rel="svg-sprite" href="./src/images/symbol-defs.svg" />
     <link rel="stylesheet" href="./src/styles.css" />
     <title>School schedule</title>
   </head>
@@ -64,9 +65,7 @@
           <br />
           <br />
           <div class="mui--text-black-54 mui--text-body2">Расписание</div>
-          <div class="mui-divider">
-            
-          </div>
+          <div class="mui-divider"></div>
           <br />
           <!-- card of schedule -->
 
