--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     />
     <script src="https://cdn.muicss.com/mui-latest/js/mui.min.js"></script>
     <link rel="svg-sprite" href="./src/images/symbol-defs.svg" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="./src/styles.css" type="text/css" />
     <title>School schedule</title>
   </head>
